syntax = "proto3";

option go_package = "github.com/jmacelroy/redirect-demo/loot_pb";

package lootpb;

service LootRPC {
  rpc LootDescription(LootDescriptionRequest) returns (LootDescriptionResponse) {}
}

message LootDescriptionRequest {
    string name = 1;
}

message LootDescriptionResponse {
    string name = 1;
    string type = 2;
    float weight = 3;
    string grid_size = 4;
    int32 loot_experience = 5;
    optional string rarity = 6;
    optional float average_price_24h = 7;
    optional float average_price_7d = 8;
}
